--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css"/>
-       
+        <link href="css/personalizado.css" rel="stylesheet" type="text/css"/>
 
 
 
