--- a/MainPageStudent.html
+++ b/MainPageStudent.html
@@ -11,11 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="ImageServlet" method="post" enctype="multipart/form-data">
-            Pregunta:<input type="text" name="pregunta" /><br />
-            Selecciona un fichero: <input type="file" name="fileName"><br />
-            <button>ENVIAR</button>
-            
-        </form>
+        <div>TODO write content</div>
     </body>
 </html>
