--- a/web/StudentHeader.html
+++ b/web/StudentHeader.html
@@ -8,10 +8,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>TodoTestWeb</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-       
+        <meta name="viewport" content="width=device-width, initial-scale=1">       
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css"/>        
         <link href="css/personalizado.css" rel="stylesheet" type="text/css"/>
+        <link href="css/personalizado.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <style>
             body {
                 padding-top: 50px;
