Agregado control de sesiones

--- a/web/StudentHeader.html
+++ b/web/StudentHeader.html
@@ -45,6 +45,7 @@
                   <li><a href=""> Inicio </a></li>
                  <li><a href="">Mis Resultados</a></li>
                  <li><a href="">Seleccionar Test</a></li>
+                 <li><a href="SessionDestroyServlet">Desconectar</a></li>
               </ul>
           </div>   
          </div>        
