--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -50,6 +50,7 @@
                  <li><a href="">Añadir Usuario</a></li>
                  <li><a href="">Activar/Desactivar Test</a></li>
                  <li><a href="">Resultados</a></li>
+                 <li><a href="SessionDestroyServlet">Desconectar</a></li>
               </ul>
           </div>   
          </div>        
