Pequeña modificacion en la cabecera

--- a/web/StudentHeader.html
+++ b/web/StudentHeader.html
@@ -42,8 +42,8 @@
           
           <div class="navbar-header">
               <ul class="nav navbar-nav">
-                  <li><a href=""> Inicio </a></li>
-                 <li><a href="">Mis Resultados</a></li>
+                  <li><a href="MainPageStudent.jsp"> Inicio </a></li>
+                 <li><a href="ResultStudentServlet">Mis Resultados</a></li>
                  <li><a href="">Seleccionar Test</a></li>
               </ul>
           </div>   
