Union de login con resultados

--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -49,7 +49,7 @@
                  <li><a href="">Añadir Pregunta</a></li>
                  <li><a href="">Añadir Usuario</a></li>
                  <li><a href="">Activar/Desactivar Test</a></li>
-                 <li><a href="">Resultados</a></li>
+                 <li><a href="ResultTeacherServlet">Resultados</a></li>
                  <li><a href="SessionDestroyServlet">Desconectar</a></li>
               </ul>
           </div>   
