--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="login.html">TodoTestWeb</a>
+          <a class="navbar-brand" href="index.jsp">TodoTestWeb</a>
         </div>
           
           <div class="navbar-header">
@@ -47,7 +47,7 @@
                  
                  <li><a href="">Añadir Test</a></li>
                  <li><a href="">Añadir Pregunta</a></li>
-                 <li><a href="">Añadir Usuario</a></li>
+                 <li><a href="AddUser.jsp">Añadir Usuario</a></li>
                  <li><a href="">Activar/Desactivar Test</a></li>
                  <li><a href="ResultTeacherServlet">Resultados</a></li>
                  <li><a href="SessionDestroyServlet">Desconectar</a></li>
