--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -48,7 +48,7 @@
                  <li><a href="AddTest.jsp">Añadir Test</a></li>
                  <li><a href="">Añadir Pregunta</a></li>
                  <li><a href="AddUser.jsp">Añadir Usuario</a></li>
-                 <li><a href="">Activar/Desactivar Test</a></li>
+                 <li><a href="ShowActiveTestServlet">Activar/Desactivar Test</a></li>
                  <li><a href="ResultTeacherServlet">Resultados</a></li>
                  <li><a href="SessionDestroyServlet">Desconectar</a></li>
               </ul>
