--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -45,7 +45,7 @@
               <ul class="nav navbar-nav">
                   <li><a href="MainPageTeacher.jsp"> Inicio </a></li>
                  
-                 <li><a href="AddTest.jsp">Añadir Test</a></li>
+                 <li><a href="ShowAddTestServlet">Añadir Test</a></li>
                  <li><a href="">Añadir Pregunta</a></li>
                  <li><a href="AddUser.jsp">Añadir Usuario</a></li>
                  <li><a href="ShowActiveTestServlet">Activar/Desactivar Test</a></li>
