--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -46,7 +46,7 @@
                   <li><a href="MainPageTeacher.jsp"> Inicio </a></li>
                  
                  <li><a href="ShowAddTestServlet">Añadir Test</a></li>
-                 <li><a href="">Añadir Pregunta</a></li>
+                 <li><a href="TeacherListServlet">Añadir Pregunta</a></li>
                  <li><a href="AddUser.jsp">Añadir Usuario</a></li>
                  <li><a href="ShowActiveTestServlet">Activar/Desactivar Test</a></li>
                  <li><a href="ResultTeacherServlet">Resultados</a></li>
