--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -11,11 +11,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css"/>
         <link href="css/personalizado.css" rel="stylesheet" type="text/css"/>
-
-
-
-        
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="js/utils.js" type="text/javascript"></script>
         <style>
             body {
                 padding-top: 50px;
