--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
-        <meta charset="ISO-8859-1">
+        
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>TodoTestWeb</title>
         <meta name="description" content="">
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css"/>
         <link href="css/personalizado.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <script src="js/utils.js" type="text/javascript"></script>
         <style>
             body {
