Modificaciones del diseño

--- a/web/StudentHeader.html
+++ b/web/StudentHeader.html
@@ -44,9 +44,9 @@
          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                   <li><a href="index.jsp"> Inicio </a></li>
-                 <li><a href="ResultStudentServlet">Mis Resultados</a></li>
-                 <li><a href="AvailableTestListServlet">Seleccionar Test</a></li>
-                 <li><a href="SessionDestroyServlet">Desconectar</a></li>
+                 <li><a href="ResultStudentServlet">Resultados</a></li>
+                 <li><a href="AvailableTestListServlet">Realizar test</a></li>
+                 <li><a href="SessionDestroyServlet"><i class="glyphicon glyphicon-off"></i></a></li>
               </ul>
           </div>   
          </div>        
