--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -53,19 +53,19 @@
         <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Test <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                          <li><a href="ShowAddTestServlet" title="AddTest">Añadir Test</a></li>
-                          <li><a href="TeacherListServlet" title="AddQuestion">Añadir Pregunta</a></li>
+                          <li><a href="ShowAddTestServlet" title="AddTest">AÃ±adir Test</a></li>
+                          <li><a href="TeacherListServlet" title="AddQuestion">AÃ±adir Pregunta</a></li>
                           <li><a href="ShowActiveTestServlet" title="Enable/DisableTest">Activar/Desactivar Test</a></li> 
                       </ul>
                   </li>
         <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Usuario <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                          <li><a href="AddUser.jsp" title="AddUser">Añadir Usuario</a></li>
+                          <li><a href="AddUser.jsp" title="AddUser">AÃ±adir Usuario</a></li>
                           <li><a href="ResultTeacherServlet" title="Results">Resultados</a></li>                         
                       </ul>
                   </li>
-                  <li><a href="SessionDestroyServlet">Desconectar</a></li>
+                  <li><a href="SessionDestroyServlet"><i class="glyphicon glyphicon-off"></i></a></li>
       </ul>
     
     </div><!-- /.navbar-collapse -->
