--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -49,7 +49,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="MainPageTeacher.jsp">Inicio <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="MainPageTeacher.jsp"><i class="glyphicon glyphicon-home"></i><span class="sr-only">(current)</span></a></li>
         <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Test <span class="caret"></span></a>
                       <ul class="dropdown-menu">
