--- a/web/Footer.html
+++ b/web/Footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer col-lg-12">
   <div class="container">
     <p class="text-muted credit">@TodoTest Web, 2015. Todos los derechos reservados</p>
   </div>
