--- a/web/TeacherHeader.html
+++ b/web/TeacherHeader.html
@@ -43,7 +43,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">TodoTestWeb</a>
+      <a class="navbar-brand" href="MainPageTeacher.jsp">TodoTestWeb</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
