--- a/web/Footer.html
+++ b/web/Footer.html
@@ -1,8 +1,7 @@
-<div class="footer col-lg-12">
-  <div class="container">
-    <p class="text-muted credit">@TodoTest Web, 2015. Todos los derechos reservados</p>
-  </div>
-</div>
-
+<nav class="navbar navbar-default  navbar-fixed-bottom" role="navigation" style="background-color: black; border-color: #31b0d5;">
+    <div class="container text-center">
+        <p class="navbar-text col-md-12 col-sm-12 col-xs-12">&copy; TodoTest, 2015. Todos los derechos reservados.</p>
+    </div>
+</nav>
 </body>
 </html>
